fix width input and align button

--- a/src/widgets/WrapperParts/Footer/LayoutFooterAlter/ui/FooterInput/FooterInput.module.scss
+++ b/src/widgets/WrapperParts/Footer/LayoutFooterAlter/ui/FooterInput/FooterInput.module.scss
@@ -71,3 +71,9 @@ $green: #0E3719;
 .form__field{
   &:required,&:invalid { box-shadow:none; }
 }
+
+@media (max-width: 510px) {
+  .inputContainer  {
+    width: 100%;
+  }
+}
